Friday night push

--- a/index.html
+++ b/index.html
@@ -230,7 +230,17 @@
           
   <main id="main">
     <h1>Blog and reference</h1>
-    <p>Hello</p>
+    <p>This website will hopefully include:</p>
+
+<ul>
+<li><p><a href="https://mattypenny.github.io/blog/">Blogs</a></p></li>
+
+<li><p><a href="https://mattypenny.github.io/sketchnotes/">Sketchnotes</a></p></li>
+
+<li><p><a href="https://mattypenny.github.io/links/">Links</a></p></li>
+
+<li><p>Quick reference stuff (tbc)</p></li>
+</ul>
 
   </main>
 
