--- a/sketchnotes/sqlserver/mitchell-tim-ssis/index.html
+++ b/sketchnotes/sqlserver/mitchell-tim-ssis/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Mitchell-Tim-SSIS | Blog and reference</title>
+  <title>Mitchell, Tim - SSIS | Blog and reference</title>
 </head>
 
   <body>
@@ -223,10 +223,10 @@
         <div>
           
   <main id="main">
-    <h1>Mitchell-Tim-SSIS</h1>
-    <p><img src="/images/sketchnotes/sqlserver/Mitchell-Tim-SSIS.jpg" alt="Sketchnote of Mitchell-Tim-SSIS" /></p>
+    <h1>Mitchell, Tim - SSIS</h1>
+    <p><img src="/images/sketchnotes/sqlserver/Mitchell,%20Tim%20-%20SSIS.jpg" alt="Sketchnote of Mitchell, Tim - SSIS" /></p>
 
-<p><a href="\/images\/sketchnotes\/sqlserver\/Mitchell-Tim-SSIS.jpg"><img src="\/images\/sketchnotes\/sqlserver\/Mitchell-Tim-SSIS.jpg" alt="Sketchnote of 'Mitchell-Tim-SSIS'"></p>
+<p><a href="\/images\/sketchnotes\/sqlserver\/Mitchell,%20Tim%20-%20SSIS.jpg"><img src="\/images\/sketchnotes\/sqlserver\/Mitchell,%20Tim%20-%20SSIS.jpg" alt="Sketchnote of 'Mitchell, Tim - SSIS'"></p>
 
   </main>
 
