Re-publishing many blog posts. Also links page i/p

--- a/links/index.html
+++ b/links/index.html
@@ -269,6 +269,147 @@
 <p><a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/ADV/SAL/To">Live Departure Boards - Andover to Salisbury</a></p>
 </li>
 </ul>
+<html>
+<head>
+<style>
+table
+{ 
+margin-left: auto;
+margin-right: auto;
+}
+td
+{ 
+margin-left: auto;
+margin-right: auto;
+}
+</head>
+</style>
+<body>
+<p><img src="/images/links/email.jpg" alt="help">
+<img src="/images/pester-error.png" alt="help"></p>
+<table border="0" align="center">
+<tr>
+  <td align="center">
+    <a href="https://gmail.com"><img src="/images/links/email.jpg" width="18.5%" height="200"></a>
+    <a href="https://twitter.com/"><img src="/images/links/twitter.jpg" alt="twitter" width="20%" height="200"></a>
+    <a href="http://www.studiotheatre.org.uk/wp-admin/"><img src="/images/links/Salisbury-Studio-Theatre.jpg" width="20%" height="200"></a>
+    <a href="http://salisburyandstonehenge.net/"><img src="/images/links/salisbury-gas-works.jpg" alt="red lion" width="20%" height="200" ></a>
+    <a href="http://mattypenny.github.io/"><img src="/images/links/hobnob.jpg" width="18.5%" height="200"></a>
+  </td>
+</tr>
+<tr>
+    <td align="center">
+      <a href="https://twitter.com/salisbury_matt/lists/a-list"><img src="/images/links/twitter.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/all-the-news"><img src="/images/links/news.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/local-news"><img src="/images/links/stones.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/lvhq"><img src="/images/links/sweets.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/microstuff"><img src="/images/links/microstuff.jpg" alt="Twitter - microstuff" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/real-life"><img src="/images/links/twitter.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/salisbury-people"><img src="/images/links/twitter.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/soccerball-cricketball"><img src="/images/links/twitter.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/telegraph"><img src="/images/links/telegraph.png" alt="github" width="6%" height="75"></a>
+      <a href="https://twitter.com/salisbury_matt/lists/the-famous-cfc"><img src="/images/links/chelsea.jpeg" alt="github" width="6%" height="75"></a>
+      <a href="http://www.bbc.co.uk/radio2"><img src="/images/links/radio2.png" alt="github" width="6%" height="75"></a>
+      <a href="http://www.bbc.co.uk/5live"><img src="/images/links/radio5.jpg" alt="github" width="6%" height="75"></a>
+      <a href="http://www.bbc.co.uk/radio4"><img src="/images/links/four.jpg" alt="github" width="6%" height="75"></a>
+      <a href="http://www.bbc.co.uk/radio4extra"><img src="/images/links/x.jpg" alt="github" width="6%" height="75"></a>
+      <a href="https://github.com/mattypenny"><img src="/images/links/github.png" alt="github dash" width="6%" height="75"></a>
+      <br>
+      <a href="https://github.com/mattypenny/posh_functions"><img src="/images/links/posh-functions.jpg" alt="pos functions" width="6%" height="75"></a>
+      <a href="https://gist.github.com/mattypenny/b271556bb0f771d39a65"><img src="/images/links/maewestsquare.jpg" alt="one-liners" width="6%" height="75"></a>
+      <a href="https://github.com/mattypenny/homepage"><img src="/images/links/homepage.png" alt="firefox start page" width="6%" height="75"></a>
+      <a href="http://mattypenny.net/powershell/perl-one-liners-emulated/"><img src="/images/links/posh-perl.jpg" alt="posh perl" width="6%" height="75"></a>
+      <a href="http://mattypenny.net/one-liners-powershell-sqlserver-unix-oracle/"><img src="/images/links/maewestsquare.jpg" alt="one-liners" width="6%" height="75"></a>
+      <a href="http://mattypenny.net/wp-admin/post.php?post=1519&action=edit"><img src="/images/links/podcasts.jpg" alt="podcasts I like" width="6%" height="75"></a>
+      <a href="https://www.penflip.com/powershellorg/a-unix-persons-guide-to-powershell/blob/master/commands-summary.txt"><img src="/images/links/linux.jpg" alt="Posh-Unix Summary" width="6%" height="75"></a>
+      <a href="https://www.penflip.com/powershellorg/a-unix-persons-guide-to-powershell"><img src="/images/links/linux.jpg" alt="Posh-Unix intro" width="6%" height="75"></a>
+      <a href="https://www.penflip.com/powershellorg"><img src="/images/links/pen.jpg" alt="Powershell at Penflip" width="6%" height="75"></a>
+      <a href="http://salisburyandstonehenge.net/stonehenge/salisbury-to-stonehenge"><img src="/images/links/bus.jpg" alt="Salisbury to Stonehenge" width="6%" height="75"></a>
+      <a href="http://salisburyandstonehenge.net/wp-admin/post-new.php?post_type=page"><img src="/images/links/giant.jpg" alt="Salisbury - new page" width="6%" height="75"></a>
+      <a href="https://pinboard.in/u:mattypenny/t:wishlist"><img src="/images/links/wishlist.jpg" alt="Wishlist" width="6%" height="75"></a>
+      <a href="https://pinboard.in/u:mattypenny/bundle:todo/"><img src="/images/links/todo.png" alt="todo" width="6%" height="75"></a>
+      <a href="https://www.7digital.com/"><img src="/images/links/7.jpg" alt="7digital" width="6%" height="75"></a>
+      <a href="https://onedrive.live.com/?id=9D71B8397DEABA2F!1404&cid=9D71B8397DEABA2F&group=0"><img src="/images/links/github.png" alt="music" width="6%" height="75"></a>
+    </td>
+</tr>
+<tr>
+  <td align="center">
+    <a href="http://www.studiotheatre.org.uk/wp-admin/"><img src="/images/links/Salisbury-Studio-Theatre.jpg" width="24%" height="200"></a>
+    <a href="http://salisburyandstonehenge.net/wp-admin/"><img src="/images/links/salisbury-gas-works.jpg" alt="red lion" width="23%" height="200" ></a>
+    <a href="http://mattypenny.net/wp-admin/"><img src="/images/links/hobnob.jpg" width="23%" height="200"></a>
+    <a href="https://www.readability.com/reading-list"><img src="/images/links/readability.jpg" width="24%" height="200"></a>
+  </td>
+</tr>
+<tr>
+  <td>
+    <a href="http://paper.li/energizedtech/1306750619?utm_source=subscription&amp;utm_medium=email&amp;utm_campaign=paper_sub"><img src="/images/links/paperli.png" alt="paperli" width="20%" height="200"></a>
+    <a href="http://digg.com/reader"><img src="/images/links/256px-Rss_Shiny_Icon.svg.png" width="19%" height="200"></a>
+    <a href="https://pinboard.in/u:mattypenny"><img src="/images/links/pinboard.jpeg" width-"20%" height="200"></a>
+    <a href="http://commons.wikimedia.org/wiki/Main_Page"><img src="/images/links/wikimedia.jpg" width-"20%" height="200"></a>
+    <a href="https://pinboard.in/u:mattypenny/t:sarum_matt/"><img src="/images/links/sarum.jpg" width-"20%" height="200"></a>
+  </td>
+</tr>
+<tr>
+<td>
+<a href="http://www.chelseafc.com/ticket-news"><img src="/images/links/cfctick.jpg" alt="twitter" width="20%" height="200"></a>
+<a href="http://www.bbc.com/sport/0/cricket/"><img src="/images/links/cricket.jpg" width="20%" height="200"></a>
+    <a href="http://www.bing.com/news/search?q=chelsea&qs=n&form=NWBQBN&pq=chelsea&sc=8-7&sp=-1&sk="><img src="/images/links/chelsea.jpeg" alt="cfc" width="20%" height="200"></a>
+    <a href="http://mattypenny.net/powershell/powershell-one-liners/perl-one-liners-emulated/"><img src="/images/links/monad.jpg" width="20%" height="200"></a>
+</td>
+</tr>
+</table>
+<p>Photo credits:
+<br><br>
+The Soviet stamp, which links through to email was scanned and processed by A. Sdobnikov (Personal collection) [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3A1989_CPA_6062.jpg">via Wikimedia Commons</a></p>
+<p><br><br>
+The twitter-y blue bird is by Faldrian (Own work) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3ATwittervogel_wiki.jpg">via Wikimedia Commons</a>
+<br><br>
+The Chelsea badge is from the Chelsea website. I&rsquo;m a member. This doesn&rsquo;t mean that I have the right to the image. But I&rsquo;m guessing Mr Abramovich won&rsquo;t mind.
+<br><br>
+The picture of Stonehenge which links to the &lsquo;On This Day&rsquo; list on my wesbite was taken by me at Winter Solstice in 2012, I think
+<br><br>
+The boy and girl are a detail from the poster for a Salisbury Studio production of Romeo and Juliet.
+<br><br>
+The Red Lion is a photo from the Inn in Salisbury. I took it
+<br><br>
+The &lsquo;Hob Nob&rsquo;is from an old postcard which I scanned
+<br><br>
+The paper.li logo is taken from their website. I&rsquo;m assuming they won&rsquo;t mind
+<br><br>
+The RSS icon is by Jessekoeckhoven (Own work) [<a href="http://creativecommons.org/publicdomain/zero/1.0/deed.en">CC0</a>], <a href="http://commons.wikimedia.org/wiki/File%3ARss_Shiny_Icon.svg">via Wikimedia Commons</a>
+<br><br>
+The Pinboard is a detail from a photo by Sampsonchen (Own work) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3APAS_Pin_Board.jpg">via Wikimedia Commons</a>
+<br><br>
+The Wikimedia notebook is by Rock drum (Own work) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3AWikimedia_UK_notebook.JPG">via Wikimedia Commons</a>
+<br><br>
+The picture of Stamford Bridge is also from the Chelsea wbesite
+<br><br>
+The picture of Brian Lara is by Ukexpat (Own work) [<a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> or <a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0-2.5-2.0-1.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3ABrianLaraUkexpatCropped.jpg">via Wikimedia Commons</a>
+<br><br>
+<br>And the monads psychedlic-looking illustration is by Sednin Nikolai (<a href="http://www.sednin.com">www.sednin.com</a>) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3AMonads.jpg">via Wikimedia Commons</a>
+<br><br>The note taking detail is from Marinus van Reymerswale (circa 1490/1495–1546?) [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3AReymerswaele_Two_tax_collectors_(detail)_03.jpg">via Wikimedia Commons</a>
+<br><br>The painting of the Four Season Paying Homage to Chronos is by Bartolomeo Altomonte [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3ABartolomeo_Altomonte_001.jpg">via Wikimedia Commons</a>
+<br><br>The beautiful picture of the Mountain Bluebird is by by Elaine R. Wilson (NaturesPicsOnline) [<a href="http://creativecommons.org/licenses/by-sa/2.5">CC-BY-SA-2.5</a>], <a href="http://commons.wikimedia.org/wiki/File%3AMountain_Bluebird.jpg">via Wikimedia Commons</a>
+<br><br>The old-style radio mike is by Alvar_Lidell.jpg: Liftarnderivative work: Mattgirling (Alvar_Lidell.jpg) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ABBCmarconi-atype.png">via Wikimedia Commons</a>
+<br><br>The silver four is by Procsilas Moscas (Flickr) [<a href="http://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ANumber_4.jpg">via Wikimedia Commons</a>
+<br><br>The number two is &ldquo;This work is in the public domain in the United States because it is a work prepared by an officer or employee of the United States Government as part of that person’s official duties under the terms of Title 17, Chapter 1, Section 105 of the US Code.&rdquo; See <a href="https://commons.wikimedia.org/wiki/File:Award_numeral_2.svg">File:Award numeral 2.svg - Wikimedia Commons</a>
+<br><br>The hand, signifying number 5 is by Dcbelanger (Own work) [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3ALSQ_5.jpg">via Wikimedia Commons</a>
+<br><br>The detail form the Mae West film poster is See page for author [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3APoster_-_Go_West_Young_Man_(1936)_02.jpg">via Wikimedia Commons</a>
+<br><br>'Jeune femme en toilette de bal&rsquo; represents &lsquo;Posh Functions&rsquo; and is by Berthe Morisot [Public domain or Public domain], <a href="https://commons.wikimedia.org/wiki/File%3ABerthe_Morisot_-_Young_Girl_in_a_Ball_Gown_-_Google_Art_Project.jpg">via Wikimedia Commons</a>
+<br><br>The pearls are by Mauro Cateb (Own work) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3AAkoya_pearls.JPG">via Wikimedia Commons</a>
+<br><br>The flaming microphone is by Hogie666 (Own work) [<a href="http://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ATalking_Bollocks_Podcast.jpg">via Wikimedia Commons</a>
+<br><br>The Linux penguin is by Larry Ewing &lt;<a rel="nofollow" class="external text" href="mailto:lewing@isc.tamu.edu"><a href="mailto:lewing@isc.tamu.edu">lewing@isc.tamu.edu</a></a>&gt; [Attribution], <a href="https://commons.wikimedia.org/wiki/File%3ALinux_logo.jpg">via Wikimedia Commons</a>
+<br><br>The &lsquo;T&rsquo; for Telegraph is by Gaspard (Own work (Original text: selbst erstellt)) [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3ADaily_Telegraph.svg">via Wikimedia Commons</a>
+<br><br>The Newspapers are by Harshil Shah from London, UK (Lisboa - NewspapersUploaded by tm) [<a href="http://creativecommons.org/licenses/by-sa/2.0">CC BY-SA 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ALisboa_-_Newspapers_(1261040258).jpg">via Wikimedia Commons</a>
+<br><br>The electronics are by Alan Benzie (originally posted to Flickr as noise makers) [<a href="http://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ANoise_makers.jpg">via Wikimedia Commons</a>
+<br><br>The &lsquo;x&rsquo; is by Acf (Own work) [<a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> or <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3AKlein_x.jpg">via Wikimedia Commons</a>
+<br><br>The sweets are by Dave Spellman from Lancashire, UK (Sweet Fest!) [<a href="http://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ACandy_mosaic.jpg">via Wikimedia Commons</a>
+<br><br>The pen tip is By Mr.checker (Own work) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a> or <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a>], <a href="https://commons.wikimedia.org/wiki/File%3AFine_point_marker.jpg">via Wikimedia Commons</a>
+<br><br>The tick is By Book by Gary Reeves, Bookstore Manager of the University of Bridgeport (Bridgeport.edu.) [<a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ABook-checked.png">via Wikimedia Commons</a>
+<br><br>'Virgin and Angels Imploring Christ not to Punish Lust, Avarice, and Pride&rsquo; is by Scarsellino [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3AScarsellino_-_Virgin_and_Angels_Imploring_Christ_not_to_Punish_Lust%2C_Avarice%2C_and_Pride_-_WGA20922.jpg">via Wikimedia Commons</a>. Avarice, representing my wishlist of stuff I want to acquire, is the middle of the three women in the bottom right.
+<br><br>The number 7 is By Benutzer:Carlo Enrico [<a href="http://creativecommons.org/licenses/by-sa/2.5">CC BY-SA 2.5</a>], <a href="https://commons.wikimedia.org/wiki/File%3AEckig2.jpg">via Wikimedia Commons</a>
+<br><br>The reading woman is &lsquo;L&rsquo;album by Jules Ernest Renoux [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3AJules_Ernest_Renoux_-_L&#039;album.jpg">via Wikimedia Commons</a></body></p>
+</html>
 
   </main>
 
