--- a/links/index.html
+++ b/links/index.html
@@ -256,11 +256,11 @@ margin-right: auto;
 <table border="0" align="center">
 <tr>
   <td align="center">
-    <a href="https://gmail.com"><img src="/images/links/email.jpg" width="18.5%" height="150"></a>
-    <a href="https://twitter.com/"><img src="/images/links/twitter.jpg" alt="twitter" width="18.5%" height="150"></a>
-    <a href="http://www.studiotheatre.org.uk/wp-admin/"><img src="/images/links/Salisbury-Studio-Theatre.jpg" width="18.5%" height="150"></a>
-    <a href="http://salisburyandstonehenge.net/"><img src="/images/links/Salisbury-Gas-Works.jpg" alt="salisbury gas works" width="18.5%" height="150" ></a>
-    <a href="http://mattypenny.github.io/"><img src="/images/links/hobnob.jpg" width="18.5%" height="150"></a>
+    <a href="https://gmail.com"><img src="/images/links/email.jpg" width="18.5%" height="18.5%"></a>
+    <a href="https://twitter.com/"><img src="/images/links/twitter.jpg" alt="twitter" width="18.5%" height="18.5%"></a>
+    <a href="http://www.studiotheatre.org.uk/wp-admin/"><img src="/images/links/Salisbury-Studio-Theatre.jpg" width="18.5%" height="18.5%"></a>
+    <a href="http://salisburyandstonehenge.net/"><img src="/images/links/Salisbury-Gas-Works.jpg" alt="salisbury gas works" width="18.5%" height="18.5%" ></a>
+    <a href="http://mattypenny.github.io/"><img src="/images/links/hobnob.jpg" width="18.5%" height="18.5%"></a>
   </td>
 </tr>
 <tr>
@@ -279,38 +279,38 @@ margin-right: auto;
 </tr>
 <tr>
 <td align="center">
-      <a href="https://open.spotify.com/artist/7c9j5x57WcRFqQzOjgGDcF"><img src="/images/links/beth_on_spotify.png" alt="spotify" width="18.5%" height="150"></a>
-      <a href="https://learning.oreilly.com/home/"><img src="/images/links/safari_online.png" alt="oreilly" width="18.5%" height="150"></a>
-      <a href="https://gohugo.io/documentation/"><img src="/images/links/hugo.png" alt="hugo docco" width="18.5%" height="150"></a>
-      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/SAL/ADV/To"><img src="/images/links/SalisburyStation.jpg" alt="salisbury to andover" width="18.5%" height="150"></a>
-      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/ADV/SAL/To"><img src="/images/links/Andover.jpg" alt="andover to salisbury" width="18.5%" height="150"></a>
+      <a href="https://open.spotify.com/artist/7c9j5x57WcRFqQzOjgGDcF"><img src="/images/links/beth_on_spotify.png" alt="spotify" width="18.5%" height="18.5%"></a>
+      <a href="https://learning.oreilly.com/home/"><img src="/images/links/safari_online.png" alt="oreilly" width="18.5%" height="18.5%"></a>
+      <a href="https://gohugo.io/documentation/"><img src="/images/links/hugo.png" alt="hugo docco" width="18.5%" height="18.5%"></a>
+      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/SAL/ADV/To"><img src="/images/links/SalisburyStation.jpg" alt="salisbury to andover" width="18.5%" height="18.5%"></a>
+      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/ADV/SAL/To"><img src="/images/links/Andover.jpg" alt="andover to salisbury" width="18.5%" height="18.5%"></a>
     </td>
 </tr>
 <tr>
 <td align="center">
-      <a href="https://darksky.net/forecast/51.0741,-1.8058/us12/en"><img src="/images/links/SalisburyGuildhall.jpg" alt="salisbury weather" width="18.5%" height="150"></a>
-      <a href="https://darksky.net/forecast/51.2143,-1.4786/us12/en"><img src="/images/links/AndoverTownHall.jpg" alt="andover weather" width="18.5%" height="150"></a>
-    <a href="http://www.chelseafc.com/ticket-news"><img src="/images/links/cfctick.jpg" alt="twitter" width="18.5%" height="150"></a>
-    <a href="http://www.bing.com/news/search?q=chelsea&qs=n&form=NWBQBN&pq=chelsea&sc=8-7&sp=-1&sk="><img src="/images/links/chelsea.jpeg" alt="cfc" width="18.5%" height="150"></a>
-    <a href="https://pinboard.in/u:mattypenny"><img src="/images/links/pinboard.jpeg" width="18.5%" height="150"></a>
+      <a href="https://darksky.net/forecast/51.0741,-1.8058/us12/en"><img src="/images/links/SalisburyGuildhall.jpg" alt="salisbury weather" width="18.5%" height="18.5%"></a>
+      <a href="https://darksky.net/forecast/51.2143,-1.4786/us12/en"><img src="/images/links/AndoverTownHall.jpg" alt="andover weather" width="18.5%" height="18.5%"></a>
+    <a href="http://www.chelseafc.com/ticket-news"><img src="/images/links/cfctick.jpg" alt="twitter" width="18.5%" height="18.5%"></a>
+    <a href="http://www.bing.com/news/search?q=chelsea&qs=n&form=NWBQBN&pq=chelsea&sc=8-7&sp=-1&sk="><img src="/images/links/chelsea.jpeg" alt="cfc" width="18.5%" height="18.5%"></a>
+    <a href="https://pinboard.in/u:mattypenny"><img src="/images/links/pinboard.jpeg" width="18.5%" height="18.5%"></a>
     </td>
 </tr>
 <tr>
 <td align="center">
-      <a href="https://github.com/mattypenny"><img src="/images/links/github.png" alt="github" width="18.5%" height="150"></a>
-      <a href="https://gist.github.com/mattypenny/b271556bb0f771d39a65"><img src="/images/links/maewestsquare.jpg" alt="one-liners" width="18.5%" height="150"></a>
-      <a href="https://pinboard.in/u:mattypenny/t:wishlist"><img src="/images/links/wishlist.jpg" alt="Wishlist" width="18.5%" height="150"></a>
-      <a href="https://pinboard.in/u:mattypenny/bundle:todo/"><img src="/images/links/todo.png" alt="todo" width="18.5%" height="150"></a>
-      <a href="https://onedrive.live.com/?id=9D71B8397DEABA2F!1404&cid=9D71B8397DEABA2F&group=0"><img src="/images/links/cloud.jpg" alt="cloud" width="18.5%" height="150"></a>
+      <a href="https://github.com/mattypenny"><img src="/images/links/github.png" alt="github" width="18.5%" height="18.5%"></a>
+      <a href="https://gist.github.com/mattypenny/b271556bb0f771d39a65"><img src="/images/links/maewestsquare.jpg" alt="one-liners" width="18.5%" height="18.5%"></a>
+      <a href="https://pinboard.in/u:mattypenny/t:wishlist"><img src="/images/links/wishlist.jpg" alt="Wishlist" width="18.5%" height="18.5%"></a>
+      <a href="https://pinboard.in/u:mattypenny/bundle:todo/"><img src="/images/links/todo.png" alt="todo" width="18.5%" height="18.5%"></a>
+      <a href="https://onedrive.live.com/?id=9D71B8397DEABA2F!1404&cid=9D71B8397DEABA2F&group=0"><img src="/images/links/cloud.jpg" alt="cloud" width="18.5%" height="18.5%"></a>
     </td>
 </tr>
 <tr>
   <td align='center'>
-    <a href="http://commons.wikimedia.org/wiki/Main_Page"><img src="/images/links/wikimedia.jpg" width="18.5%" height="150"></a>
-    <a href="http://www.bbc.com/sport/0/cricket/"><img src="/images/links/cricket.jpg" width="18.5%" height="150"></a>
-    <a href="https://www.odeon.co.uk/cinemas/salisbury/124/"><img src="/images/links/odeon.jpg" alt="the cinema" width="18.5%" height="150"></a>
-    <a href="https://www.wiltshirecreative.co.uk/whats-on/main-house/"><img src="/images/links/theatre.jpg" alt="todo" width="18.5%" height="150"></a>
-    <a href="http://www.cityhallsalisbury.co.uk/"><img src="/images/links/CityHall.jpg" alt="City Hall" width="18.5%" height="150"></a>
+    <a href="http://commons.wikimedia.org/wiki/Main_Page"><img src="/images/links/wikimedia.jpg" width="18.5%" height="18.5%"></a>
+    <a href="http://www.bbc.com/sport/0/cricket/"><img src="/images/links/cricket.jpg" width="18.5%" height="18.5%"></a>
+    <a href="https://www.odeon.co.uk/cinemas/salisbury/124/"><img src="/images/links/odeon.jpg" alt="the cinema" width="18.5%" height="18.5%"></a>
+    <a href="https://www.wiltshirecreative.co.uk/whats-on/main-house/"><img src="/images/links/theatre.jpg" alt="todo" width="18.5%" height="18.5%"></a>
+    <a href="http://www.cityhallsalisbury.co.uk/"><img src="/images/links/CityHall.jpg" alt="City Hall" width="18.5%" height="18.5%"></a>
   </td>
 </tr>
 </table>
