Changed sketchnotes folder name

--- a/sketchnotes/sketchnoting/index.html
+++ b/sketchnotes/sketchnoting/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>visual vocabulary | Blog and reference</title>
+  <title>sketchnoting | Blog and reference</title>
 </head>
 
   <body>
@@ -236,7 +236,7 @@
         <div>
           
   <main id="main">
-    <h1>visual vocabulary</h1>
+    <h1>sketchnoting</h1>
 
     <ul class="patterns-list">
     
