--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -276,22 +276,22 @@
         
           <li>
             <h2>
-              <a href="https://mattypenny.github.io/sketchnotes/sqlserver/">
+              <a href="https://mattypenny.github.io/sketchnotes/sketchnoting/">
                 <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
                   <use xlink:href="#bookmark"></use>
                 </svg>
-                sqlserver
+                sketchnoting
               </a>
             </h2>
           </li>        
         
           <li>
             <h2>
-              <a href="https://mattypenny.github.io/sketchnotes/sketchnoting/">
+              <a href="https://mattypenny.github.io/sketchnotes/sqlserver/">
                 <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
                   <use xlink:href="#bookmark"></use>
                 </svg>
-                visual vocabulary
+                sqlserver
               </a>
             </h2>
           </li>        
