--- a/sketchnotes/sqlserver/korotkevitch-dmitri-sql-internals/index.html
+++ b/sketchnotes/sqlserver/korotkevitch-dmitri-sql-internals/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Korotkevitch, Dmitri - Sql Internals | Blog and reference</title>
+  <title>Korotkevitch - Dmitri - Sql - Internals | Blog and reference</title>
 </head>
 
   <body>
@@ -236,8 +236,8 @@
         <div>
           
   <main id="main">
-    <h1>Korotkevitch, Dmitri - Sql Internals</h1>
-    <p><a href="/images/sketchnotes/sqlserver/Korotkevitch,%20Dmitri%20-%20Sql%20Internals.jpg"><img src="/images/sketchnotes/sqlserver/Korotkevitch,%20Dmitri%20-%20Sql%20Internals.jpg" alt="Sketchnote of 'Korotkevitch, Dmitri - Sql Internals'"></p>
+    <h1>Korotkevitch - Dmitri - Sql - Internals</h1>
+    <p><a href="/images/sketchnotes/sqlserver/Korotkevitch-Dmitri-Sql-Internals.jpg"><img src="/images/sketchnotes/sqlserver/Korotkevitch-Dmitri-Sql-Internals.jpg" alt="Sketchnote of 'Korotkevitch - Dmitri - Sql - Internals'"></p>
 
   </main>
 
@@ -275,4 +275,6 @@
   
 
   </body>
+</html>
+y>
 </html>
