--- a/index.html
+++ b/index.html
@@ -246,18 +246,20 @@
     <p>This website will hopefully include:</p>
 <ul>
 <li>
-<p><a href="/blog/">Blogs</a></p>
+<p><a href="/blog/">blogs</a></p>
 </li>
 <li>
-<p><a href="/sketchnotes/">Sketchnotes</a></p>
+<p><a href="/sketchnotes/">sketchnotes</a></p>
 </li>
 <li>
-<p><a href="/links/">Links</a></p>
+<p><a href="/links/">links</a></p>
 </li>
 <li>
-<p>Quick reference stuff (tbc)</p>
+<p><a href="/quickreference/">quick reference</a></p>
 </li>
 </ul>
+<p>If you&rsquo;ve got any feedback, then the best way to get hold of me is on twitter at <a href="https://twitter.com/salisbury_matt">@salisbury_matt</a></p>
+<p>If you don&rsquo;t have a twitter account, then I&rsquo;m mattypenny at gmail.com</p>
 
   </main>
 
