--- a/quickreference/applications/index.html
+++ b/quickreference/applications/index.html
@@ -237,8 +237,12 @@
           
   <main id="main">
     <h1>applications</h1>
-    January 1, 0001
-    <h2 id="confluence-server">Confluence (server)</h2>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
+<h2 id="confluence-server">Confluence (server)</h2>
 <h4 id="global-shortcuts">Global Shortcuts</h4>
 <table>
 <thead>
