--- a/quickreference/dos/index.html
+++ b/quickreference/dos/index.html
@@ -237,8 +237,12 @@
           
   <main id="main">
     <h1>dos (cmd)</h1>
-    January 1, 0001
-    <h5 id="print-to-a-printer-from-dos">Print to a printer from DOS</h5>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
+<h5 id="print-to-a-printer-from-dos">Print to a printer from DOS</h5>
 <pre><code>print /D:&quot;\prt01SVPRT006&quot; new.sql
 </code></pre>
 <h5 id="copying-files-that-are-newer-or-dont-exist-at-destination">Copying files that are newer or don&rsquo;t exist at destination</h5>
