--- a/quickreference/old/index.html
+++ b/quickreference/old/index.html
@@ -237,8 +237,12 @@
           
   <main id="main">
     <h1>old(er) stuff</h1>
-    January 1, 0001
-    <h2 id="perl">perl</h2>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
+<h2 id="perl">perl</h2>
 <p>run_bat_sql</p>
 <pre><code>
 $ORACLE_SID=substr($CONNECT_STRING, index($CONNECT_STRING, &quot;@&quot;) +1);
