--- a/quickreference/powershell/index.html
+++ b/quickreference/powershell/index.html
@@ -237,8 +237,11 @@
           
   <main id="main">
     <h1>powershell</h1>
-    January 1, 0001
-    <h1 id="powershell">Powershell</h1>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
 <p>This ramshackle collection of Powershell commands evolved from my own quick-reference crib-sheets over the last couple of years.</p>
 <h2 id="get-code">Get code</h2>
 <h3 id="show-loaded-powershell-function-code">Show loaded Powershell function code</h3>
