--- a/quickreference/sqlserver/index.html
+++ b/quickreference/sqlserver/index.html
@@ -237,8 +237,12 @@
           
   <main id="main">
     <h1>sqlserver</h1>
-    April 8, 2012
-    <h2 id="sqlserver-data-dictionary">SqlServer Data Dictionary</h2>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
+<h2 id="sqlserver-data-dictionary">SqlServer Data Dictionary</h2>
 <h3 id="files">Files</h3>
 <pre><code>select d.name,
        f.filename
