--- a/quickreference/unsorted/index.html
+++ b/quickreference/unsorted/index.html
@@ -237,8 +237,12 @@
           
   <main id="main">
     <h1>unsorted &#39;stuff&#39;</h1>
-    January 1, 0001
-    <p>This Markdown file is for dumping un-sorted bits of code</p>
+    December 25, 2012
+    <blockquote>
+<p>The &lsquo;quick reference&rsquo; pages here are &lsquo;crib files&rsquo;, which I typically use from the command line. They were originally plain text files which I grep-ed, or findstr-ed, or select-string-ed to look up bits of syntax</p>
+<p>More recently I&rsquo;ve put some markdown tags around the text so that I could put them up here.</p>
+</blockquote>
+<p>This Markdown file is for dumping un-sorted bits of code</p>
 <pre><code>
 get-adgroup -Filter {name -like &quot;*&quot;} | select name, groupcategory, samaccountname | sort-object -property name
 get-aduser -Filter {name -like &quot;*sql*&quot;} | select name,  samaccountname, objectclass, Enabled
