Changed the links page from pictures to text

--- a/links/index.html
+++ b/links/index.html
@@ -257,60 +257,121 @@ margin-right: auto;
 <table border="0" align="center">
 <tr>
   <td align="center">
-    <a href="https://gmail.com"><img src="/images/links/email.jpg" width="18.5%" height="18.5%"></a>
-    <a href="https://twitter.com/"><img src="/images/links/twitter.jpg" alt="twitter" width="18.5%" height="18.5%"></a>
-    <a href="http://www.studiotheatre.org.uk/wp-admin/"><img src="/images/links/Salisbury-Studio-Theatre.jpg" width="18.5%" height="18.5%"></a>
-    <a href="http://salisburyandstonehenge.net/"><img src="/images/links/Salisbury-Gas-Works.jpg" alt="salisbury gas works" width="18.5%" height="18.5%" ></a>
-    <a href="http://mattypenny.github.io/"><img src="/images/links/hobnob.jpg" width="18.5%" height="18.5%"></a>
+    <a href="https://gmail.com">Email</a>
+  </td>
+  <td align="center">
+    <a href="https://twitter.com/">Twitter</a>
+  </td>
+  <td align="center">
+    <a href="http://www.studiotheatre.org.uk/wp-admin/">Studio</a>
+  </td>
+  <td align="center">
+    <a href="http://salisburyandstonehenge.net/">Salisbury and Stonehenge</a>
+  </td>
+  <td align="center">
+    <a href="http://mattypenny.github.io/">mattypenny</a>
   </td>
 </tr>
 <tr>
 <td align="center">
-      <a href="https://open.spotify.com/artist/7c9j5x57WcRFqQzOjgGDcF"><img src="/images/links/beth_on_spotify.png" alt="spotify" width="18.5%" height="18.5%"></a>
-      <a href="https://learning.oreilly.com/home/"><img src="/images/links/safari_online.png" alt="oreilly" width="18.5%" height="18.5%"></a>
-      <a href="https://gohugo.io/documentation/"><img src="/images/links/hugo.png" alt="hugo docco" width="18.5%" height="18.5%"></a>
-      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/SAL/ADV/To"><img src="/images/links/SalisburyStation.jpg" alt="salisbury to andover" width="18.5%" height="18.5%"></a>
-      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/ADV/SAL/To"><img src="/images/links/Andover.jpg" alt="andover to salisbury" width="18.5%" height="18.5%"></a>
+      <a href="https://open.spotify.com/artist/7c9j5x57WcRFqQzOjgGDcF">Spotify</a>
+  </td>
+  <td align="center">
+      <a href="https://learning.oreilly.com/home/">O Reilly</a>
+  </td>
+  <td align="center">
+      <a href="https://gohugo.io/documentation/">Hugo</a>
+  </td>
+  <td align="center">
+      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/SAL/ADV/To">Salisbury to Andover</a>
+  </td>
+  <td align="center">
+      <a href="https://ojp.nationalrail.co.uk/service/ldbboard/dep/ADV/SAL/To">Andover to Salisbury</a>
     </td>
 </tr>
 <tr>
 <td align="center">
-      <a href="https://darksky.net/forecast/51.0741,-1.8058/us12/en"><img src="/images/links/SalisburyGuildhall.jpg" alt="salisbury weather" width="18.5%" height="18.5%"></a>
-      <a href="https://darksky.net/forecast/51.2143,-1.4786/us12/en"><img src="/images/links/AndoverTownHall.jpg" alt="andover weather" width="18.5%" height="18.5%"></a>
-    <a href="http://www.chelseafc.com/ticket-news"><img src="/images/links/cfctick.jpg" alt="twitter" width="18.5%" height="18.5%"></a>
-    <a href="http://www.bing.com/news/search?q=chelsea&qs=n&form=NWBQBN&pq=chelsea&sc=8-7&sp=-1&sk="><img src="/images/links/chelsea.jpeg" alt="cfc" width="18.5%" height="18.5%"></a>
-    <a href="https://pinboard.in/u:mattypenny"><img src="/images/links/pinboard.jpeg" width="18.5%" height="18.5%"></a>
+      <a href="https://darksky.net/forecast/51.0741,-1.8058/us12/en">Darksky</a>
+  </td>
+  <td align="center">
+      <a href="https://darksky.net/forecast/51.2143,-1.4786/us12/en">Darksky</a>
+  </td>
+  <td align="center">
+    <a href="http://www.bing.com/news/search?q=chelsea&qs=n&form=NWBQBN&pq=chelsea&sc=8-7&sp=-1&sk=">Chelsea news</a>
+  </td>
+  <td align="center">
+    <a href="https://pinboard.in/u:mattypenny">Pinboard</a>
+    </td>
+  <td align="center">
+    <a href="http://www.chelseafc.com/ticket-news">Chelsea Ticket news</a>
     </td>
 </tr>
 <tr>
 <td align="center">
-      <a href="https://github.com/mattypenny"><img src="/images/links/github.png" alt="github" width="18.5%" height="18.5%"></a>
-      <a href="https://gist.github.com/mattypenny/b271556bb0f771d39a65"><img src="/images/links/maewestsquare.jpg" alt="one-liners" width="18.5%" height="18.5%"></a>
-      <a href="https://pinboard.in/u:mattypenny/t:wishlist"><img src="/images/links/wishlist.jpg" alt="Wishlist" width="18.5%" height="18.5%"></a>
-      <a href="https://pinboard.in/u:mattypenny/bundle:todo/"><img src="/images/links/todo.png" alt="todo" width="18.5%" height="18.5%"></a>
-      <a href="https://onedrive.live.com/?id=9D71B8397DEABA2F!1404&cid=9D71B8397DEABA2F&group=0"><img src="/images/links/cloud.jpg" alt="cloud" width="18.5%" height="18.5%"></a>
+      <a href="https://github.com/mattypenny">Github</a>
+  </td>
+  <td align="center">
+      <a href="https://gist.github.com/mattypenny/b271556bb0f771d39a65">A gist</a>
+  </td>
+  <td align="center">
+      <a href="https://pinboard.in/u:mattypenny/t:wishlist">Wishlist</a>
+  </td>
+  <td align="center">
+      <a href="https://pinboard.in/u:mattypenny/bundle:todo/">Todo</a>
+  </td>
+  <td align="center">
+      <a href="https://onedrive.live.com/?id=9D71B8397DEABA2F!1404&cid=9D71B8397DEABA2F&group=0">Onedrive</a>
     </td>
 </tr>
 <tr>
   <td align='center'>
-    <a href="http://commons.wikimedia.org/wiki/Main_Page"><img src="/images/links/wikimedia.jpg" width="18.5%" height="18.5%"></a>
-    <a href="http://www.bbc.com/sport/0/cricket/"><img src="/images/links/cricket.jpg" width="18.5%" height="18.5%"></a>
-    <a href="https://www.odeon.co.uk/cinemas/salisbury/124/"><img src="/images/links/odeon.jpg" alt="the cinema" width="18.5%" height="18.5%"></a>
-    <a href="https://www.wiltshirecreative.co.uk/whats-on/main-house/"><img src="/images/links/theatre.jpg" alt="todo" width="18.5%" height="18.5%"></a>
-    <a href="http://www.cityhallsalisbury.co.uk/"><img src="/images/links/CityHall.jpg" alt="City Hall" width="18.5%" height="18.5%"></a>
+    <a href="http://commons.wikimedia.org/wiki/Main_Page">Wikimedia Commons</a>
+  </td>
+  <td align="center">
+    <a href="http://www.bbc.com/sport/0/cricket/">Cricket</a>
+  </td>
+  <td align="center">
+    <a href="https://www.odeon.co.uk/cinemas/salisbury/124/">Odeon</a>
+  </td>
+  <td align="center">
+    <a href="https://www.wiltshirecreative.co.uk/whats-on/main-house/">Playhouse</a>
+  </td>
+  <td align="center">
+    <a href="http://www.cityhallsalisbury.co.uk/">City Hall</a>
   </td>
 </tr>
 <tr>
     <td align="center">
-      <a href="https://twitter.com/"><img src="/images/links/twitter.jpg" alt="twitter" width="9%" height="9%"></a>
-      <a href="https://twitter.com/salisbury_matt/lists/lvhq"><img src="/images/links/sweets.jpg" alt="github" width="9%" height="9%"></a>
-      <a href="https://twitter.com/salisbury_matt/lists/microstuff"><img src="/images/links/microstuff.jpg" alt="Twitter - microstuff" width="9%" height="9%"></a>
-      <a href="https://twitter.com/salisbury_matt/lists/soccerball-cricketball"><img src="/images/links/twitter.jpg" alt="github" width="9%" height="9%"></a>
-      <a href="https://twitter.com/salisbury_matt/lists/the-famous-cfc"><img src="/images/links/chelsea.jpeg" alt="github" width="9%" height="9%"></a>
-      <a href="http://www.bbc.co.uk/radio4extra"><img src="/images/links/radio.jpg" alt="github" width="9%" height="9%"></a>
-      <a href="http://www.bbc.co.uk/radio2"><img src="/images/links/radio2.png" alt="github" width="9%" height="9%"></a>
-      <a href="http://www.bbc.co.uk/5live"><img src="/images/links/radio5.jpg" alt="github" width="9%" height="9%"></a>
-      <a href="http://www.bbc.co.uk/radio4"><img src="/images/links/four.jpg" alt="github" width="9%" height="9%"></a>
+      <a href="https://twitter.com/">Twitter</a>
+  </td>
+  <td align="center">
+      <a href="https://twitter.com/salisbury_matt/lists/lvhq">Lvhq</a>
+  </td>
+  <td align="center">
+      <a href="https://twitter.com/salisbury_matt/lists/microstuff">Techie</a>
+  </td>
+  <td align="center">
+      <a href="https://twitter.com/salisbury_matt/lists/soccerball-cricketball">Soccerball/Cricketball</a>
+  </td>
+  <td align="center">
+      <a href="https://twitter.com/salisbury_matt/lists/the-famous-cfc">The famous CFC</a>
+  </td>
+<tr>
+<tr>
+  <td align="center">
+      <a href="http://www.bbc.co.uk/radio4extra">$ extra</a>
+  </td>
+  <td align="center">
+      <a href="http://www.bbc.co.uk/radio2">2</a>
+  </td>
+  <td align="center">
+      <a href="http://www.bbc.co.uk/5live">5</a>
+  </td>
+  <td align="center">
+      <a href="http://www.bbc.co.uk/radio4">4</a>
+</td>
+  <td align="center">
+      <a href="http://www.bbc.co.uk/radio4">4</a>
 </td>
 </tr>
 </table>
@@ -375,12 +436,12 @@ The picture of Stamford Bridge is also from the Chelsea wbesite
 The picture of Brian Lara is by Ukexpat (Own work) [<a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> or <a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0-2.5-2.0-1.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3ABrianLaraUkexpatCropped.jpg">via Wikimedia Commons</a>
 <br><br>
 <br>And the monads psychedlic-looking illustration is by Sednin Nikolai (<a href="http://www.sednin.com">www.sednin.com</a>) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3AMonads.jpg">via Wikimedia Commons</a>
-<br><br>The note taking detail is from Marinus van Reymerswale (circa 1490/1495–1546?) [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3AReymerswaele_Two_tax_collectors_(detail)_03.jpg">via Wikimedia Commons</a>
+<br><br>The note taking detail is from Marinus van Reymerswale (circa 1490/1495ï¿½1546?) [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3AReymerswaele_Two_tax_collectors_(detail)_03.jpg">via Wikimedia Commons</a>
 <br><br>The painting of the Four Season Paying Homage to Chronos is by Bartolomeo Altomonte [Public domain], <a href="http://commons.wikimedia.org/wiki/File%3ABartolomeo_Altomonte_001.jpg">via Wikimedia Commons</a>
 <br><br>The beautiful picture of the Mountain Bluebird is by by Elaine R. Wilson (NaturesPicsOnline) [<a href="http://creativecommons.org/licenses/by-sa/2.5">CC-BY-SA-2.5</a>], <a href="http://commons.wikimedia.org/wiki/File%3AMountain_Bluebird.jpg">via Wikimedia Commons</a>
 <br><br>The old-style radio mike is by Alvar_Lidell.jpg: Liftarnderivative work: Mattgirling (Alvar_Lidell.jpg) [<a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ABBCmarconi-atype.png">via Wikimedia Commons</a>
 <br><br>The silver four is by Procsilas Moscas (Flickr) [<a href="http://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>], <a href="https://commons.wikimedia.org/wiki/File%3ANumber_4.jpg">via Wikimedia Commons</a>
-<br><br>The number two is &ldquo;This work is in the public domain in the United States because it is a work prepared by an officer or employee of the United States Government as part of that person’s official duties under the terms of Title 17, Chapter 1, Section 105 of the US Code.&rdquo; See <a href="https://commons.wikimedia.org/wiki/File:Award_numeral_2.svg">File:Award numeral 2.svg - Wikimedia Commons</a>
+<br><br>The number two is &ldquo;This work is in the public domain in the United States because it is a work prepared by an officer or employee of the United States Government as part of that personï¿½s official duties under the terms of Title 17, Chapter 1, Section 105 of the US Code.&rdquo; See <a href="https://commons.wikimedia.org/wiki/File:Award_numeral_2.svg">File:Award numeral 2.svg - Wikimedia Commons</a>
 <br><br>The hand, signifying number 5 is by Dcbelanger (Own work) [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3ALSQ_5.jpg">via Wikimedia Commons</a>
 <br><br>The detail form the Mae West film poster is See page for author [Public domain], <a href="https://commons.wikimedia.org/wiki/File%3APoster_-_Go_West_Young_Man_(1936)_02.jpg">via Wikimedia Commons</a>
 <br><br>'Jeune femme en toilette de bal&rsquo; represents &lsquo;Posh Functions&rsquo; and is by Berthe Morisot [Public domain or Public domain], <a href="https://commons.wikimedia.org/wiki/File%3ABerthe_Morisot_-_Young_Girl_in_a_Ball_Gown_-_Google_Art_Project.jpg">via Wikimedia Commons</a>
